# YYScreenTime_win-rs

./: .gitignore  Cargo.toml  README.md
src/: gui.rs  main.rs  watcher.rs  windows_tools.rs
wix/: main.wxs
