[package]
name = "YYScreenTime_win-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yy-tromb/YYScreenTime_win-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
iced = {version="0.12.1",features=[] }
# iced = {version="0.13.0",features=["multi_window"] }
iced_aw = "0.9.3"
ipc-channel = "0.19.0"
remoc = "0.14.0"
tokio = {version="1.41.1",features=["process","net"]}

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_ApplicationInstallationAndServicing",
]

[profile.release]
strip = true
lto = true
