[package]
name = "YYScreenTime_win-rs"
version = "0.1.0"
authors = ["yy-tromb"]
edition = "2024"
repository = "https://github.com/yy-tromb/YYScreenTime_win-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive","string","unicode"] }
iced = {version="0.12.1",features=[] }
# iced = {version="0.13.0",features=["multi_window"] }
iced_aw = "0.9.3"
ipc-channel = "0.20.1"
remoc = "0.15.9"
tokio = {version="1.44.2",features=["process","net"]}

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_ApplicationInstallationAndServicing",
]

[profile.release]
strip = true
lto = "fat"
opt-level=3
